// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bgnvot sc-hHfuMS dkFyex sc-cbDFGl kpXWbY"
    >
      <div
        class="sc-ljRaeN bNnOPq"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bgnvot sc-hHfuMS bJXmXN sc-cbDFGl kpXWbY"
    >
      <div
        class="sc-ljRaeN chTrBA"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-jmhFuu igAKDV sc-cbDFGl kpXWbY"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS sc-dUrmIn ekVfXV hDPBOG"
      >
        <div
          class="sc-gKseQn cOdZAq sc-iBPTik bgnvot sc-hHfuMS dkFyex"
        >
          <div
            class="sc-ljRaeN bNnOPq"
          />
          <div
            class="sc-fKFxtB eNMjwF sc-bBXrwG iwIYv"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-httYss dJEpRN"
      >
        <div
          class="sc-gKseQn cOdZAq sc-iBPTik ejXavZ"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bgnvot sc-hHfuMS dkFyex sc-cbDFGl kpXWbY"
    >
      <div
        class="sc-ljRaeN bNnOPq"
      />
      <div
        class="sc-fKFxtB eNMjwF sc-bBXrwG iwIYv"
      >
        <div
          class="sc-fKFxtB eNMjwF sc-bBXrwG icwIUv"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 jPMrnq sc-bqyKOL sc-bkzYnD hvbETX bfVEDN sc-dIUeWJ cyJleo"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bgnvot sc-hHfuMS dkFyex sc-cbDFGl kpXWbY"
    >
      <div
        class="sc-ljRaeN bNnOPq"
      />
      <div
        class="sc-fKFxtB eNMjwF sc-bBXrwG iwIYv"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
